--- a/templates/list_pages.html
+++ b/templates/list_pages.html
@@ -1,7 +1,8 @@
 {% load custom_tags %}
-<div class="col-lg-12 text-center">
+
+<center>
    {% if page_obj.has_previous %}
-       <a href="{% url_replace page=1 %}">1</a>
+       <a href="?{% url_replace page=1 %}">1</a>
        {% if page_obj.previous_page_number != 1 %}
            ...
            <a href="?{% url_replace page=page_obj.previous_page_number %}">{{ page_obj.previous_page_number }}</a>
@@ -15,4 +16,4 @@
            <a href="?{% url_replace page=page_obj.paginator.num_pages %}">{{ page_obj.paginator.num_pages }}</a>
        {% endif %}
    {% endif %}
-</div>
+</center>
