--- a/templates/postboard/posts.html
+++ b/templates/postboard/posts.html
@@ -9,21 +9,32 @@
    <h1>{{title}}</h1>
    <hr>
 </center>
-   {% if posts %}
-       <table>
-           {% for post in posts %}
-             <tr>
-               <td><a href="{% url 'post' pk=post.pk %}">{{ post.title|truncatechars:120 }}</a></td>
-               <td>{{ post.time|date:'d.m.Y H:i'  }}</td>
-               <td>{{ post.text |truncatechars:255 }} <hr> </td>
-             </tr>
-            {% endfor %}
-       </table>
-       {% include 'list_pages.html' %}
-   {% else %}
-       <center>
-           <h2>Объявлений нет!</h2>
-       </center>
-   {% endif %}
+{% if posts %}
+    <table>
+        {% for post in posts %}
+            <tr>
+                <td>&nbsp</td>
+                <td><a href="{% url 'post' pk=post.pk %}">{{ post.title|truncatechars:120 }}</a><br></td>
+                <td>{{ post.time|date:'d.m.Y H:i'  }}</td>
+                <td>{{ post.text |truncatechars:255 }}</td>
+                <td>{{ post.author }}</td>
+                <td>&nbsp</td>
+            </tr>
+            <tr>
+                <td>&nbsp</td>
+                <td><hr></td>
+                <td><hr></td>
+                <td><hr></td>
+                <td><hr></td>
+                <td>&nbsp</td>
+            </tr>
+        {% endfor %}
+    </table>
+    {% include 'list_pages.html' %}
+{% else %}
+    <center>
+        <h2>Объявлений нет!</h2>
+    </center>
+{% endif %}
 <br><br>
 {% endblock content %}
