filtering only on your posts. created deleting and accepting posts

--- a/templates/default.html
+++ b/templates/default.html
@@ -3,7 +3,7 @@
 <head>
     {% block textstyle %}
     {% endblock textstyle %}
-    <title>{% block title %} {% endblock title %}</title>
+    <title>{% block title %} {{ title }} {% endblock title %}</title>
     {% block script %}
     {% endblock script %}
 </head>
