--- a/templates/postboard/post_edit.html
+++ b/templates/postboard/post_edit.html
@@ -8,16 +8,19 @@
             {% csrf_token %}
             <h4>{{ form.title.label }}</h4>
             {{ form.title }}
-            <br><br>
+            <br>
             <h4>{{ form.category.label }}</h4>
             {% for checkbox in form.category %}
                 <i>{{ checkbox }} </i> &nbsp
             {% endfor %}
             <br>
-            {{ form.category.help_text }}
-            <br><br>
+            <ul>выберите одну из категорий</ul>
             <h4>{{ form.text.label }}</h4>
             {{ form.text }}
+            <br>
+            <h4>{{ form.photo.label }}</h4>
+            {{ form.photo.help_text }}
+            {{ form.photo }}
             <br><br>
             <input type="submit" value="Сохранить" />
         </form>
