--- a/templates/postboard/post_edit.html
+++ b/templates/postboard/post_edit.html
@@ -4,7 +4,7 @@
     <center>
         <h1>{{ title }}</h1>
         <hr>
-        <form action="" method="post">
+        <form action="" method="post" enctype="multipart/form-data">
             {% csrf_token %}
             <h4>{{ form.title.label }}</h4>
             {{ form.title }}
