--- a/templates/users/account.html
+++ b/templates/users/account.html
@@ -17,7 +17,7 @@
             <div class="form-error">{{ f.errors }}</div>
             <br>
         {% endfor %}
-        <input type="submit" name="do_search" value="Выбрать" />
+        <input type="submit" name="do_choice" value="Выбрать" />
         </form>
     </center>
     <br>
